# scrapy-download-handlers-incubator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.rst  pyproject.toml  tox.toml
.github/workflows/: checks.yml  publish.yml  tests-macos.yml  tests-ubuntu.yml  tests-windows.yml
src/scrapy_download_handlers_incubator/: __init__.py  utils.py
src/scrapy_download_handlers_incubator/handlers/: __init__.py  _base.py  aiohttp.py  curl_cffi.py  httpx.py  niquests.py  pyreqwest.py  utils.py  wreq.py
tests/: conftest.py  spiders.py  test_handler_aiohttp.py  test_handler_curl_cffi.py  test_handler_httpx.py  test_handler_niquests.py  test_handler_pyreqwest.py  test_handler_wreq.py  test_handlers_base.py
tests/keys/: localhost.crt  localhost.key
tests/mockserver/: http.py  http_base.py  http_resources.py  mitm_proxy.py  mitm_proxy_addon.py  utils.py
tests/utils/: __init__.py  decorators.py  proxy.py
